# dice-ai

./: .env.example  .gitignore  agent.py  app.py  pyproject.toml  requirements.txt  store.py
frontend/src/: App.css  App.jsx  index.css
models/: __init__.py  message.py  session.py
routes/: chat.py
